--- a/src/app/Personajes/Personajes.component..css
+++ b/src/app/Personajes/Personajes.component..css
@@ -1,7 +1,13 @@
 
+#contenet{
+    background-color: gray;
+    border-style: dashed;
+    padding: 20px;
+}
+
 
 p{
-    color: blueviolet;
+    color: white;
     font-family: Georgia, 'Times New Roman', Times, serif ;
     font-weight: bolder;
     text-align: center;
