--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
 
+<a routerLink="/">Listado de Personajes</a>
+<br>
+
+<a routerLink="/input">Alta</a>
+
+<br>
+<br>
+<router-outlet></router-outlet>
+<!--
 
 <app-Personajes></app-Personajes>
+
+<br>
+<br>
+
+
+<app-personaje-imput></app-personaje-imput>
+-->
